test/files/neg/t0209.check
t0209.scala:15: error: type mismatch;
 found   : C
 required: _1.type where val _1: A
    (new B: A).f(new C)
                 ^
one error found
